<resources>
    <string name="app_name">NoteApp</string>

    <!-- Main -->
    <string name="main_title_text">Notes</string>
    <string name="search_text">Search Note</string>
    <string name="add_note_description">Add Note Icon</string>
    <string name="add_note_text">Add New Note</string>

    <!-- Note -->
    <string name="title_text">Title</string>
    <string name="contents_text">Contents Text</string>
    <string name="date_text">28-08-2022</string>

</resources>